# demo

./: &a  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile  README.md  References.md  start_wasm_hr.bat  start_wasm_hr.sh  unpack.linux_header
assets/: strings.toml
assets/fonts/: thick_8x8.xml
cmake/: check_size.cmake  crinkler-wrapper.sh  demo.cmake  demo_wasm.cmake  demo_windows.cmake  gif_export.cmake  gif_tool.cmake  smol-wrapper.sh  toolchain-windows-crinkler.cmake  wasm.cmake  wasm32.cmake  win32.cmake  windows.cmake
cmake/demo/: demo.cmake
cmake/toolchains/: clang-wasm32.cmake  msvc.cmake  wasm32.cmake  windows.cmake
include/common/: frame_infos.hpp
include/demo/: demo.hpp  plasma.hpp  rotoz.hpp  scene_a.hpp  scene_b.hpp
include/engine/: color.hpp  debug_tools.hpp  demo.hpp  drawable.hpp  font.hpp  maths.hpp  matrix.hpp  pixel_buffer.hpp  rect.hpp  timeline.hpp
makefiles/: wasm32.mk  win32.mk
src/: CMakeLists.txt  frame_infos.h  main.cpp  main_win.cpp  maths.hpp  scene.hpp  scene_a.cpp  scene_a.hpp
src/common/: CMakeLists.txt  color.cpp  maths.cpp  maths.hpp  scene.hpp  scene_a.cpp  scene_a.hpp
src/demo/: CMakeLists.txt  demo.cpp  draw_text.cpp  draw_text.hpp  plasma.cpp  plasma.hpp  rotoz.cpp  rotoz.hpp  scene_a.cpp  scene_a.hpp  scene_b.cpp  scene_b.hpp  segment_sdf.cpp  segment_sdf.hpp
src/engine/: CMakeLists.txt  color.cpp  font.cpp  maths.cpp  timeline.cpp
src/engine/gif/: CMakeLists.txt  entry.cpp  maths.cpp
src/engine/linux/: CMakeLists.txt  entry.cpp  entry.s  maths.cpp  memory.cpp
src/engine/wasm32/: CMakeLists.txt  maths.cpp  memory.cpp
src/engine/wasm32/shell/: style.css
src/engine/wasm32/shell/scripts/: hotreload.js  load_wasm.js
src/engine/windows/: CMakeLists.txt  debug_tools.cpp  demo.def  entry.cpp  maths.cpp  memory.cpp
src/gif_export/: CMakeLists.txt  main.cpp
src/tool_gif/: CMakeLists.txt  main.cpp
src/wasm/: main.cpp
src/wasm32/: main.cpp
src/win32/: main.cpp  maths.cpp
src/windows/: CMakeLists.txt  main.cpp
templates/wasm32/: index.html
templates/wasm32/hot_reload_server/: notify.js  package-lock.json  package.json
tools/: CMakeLists.txt
tools/asset_embedder/: CMakeLists.txt  asset_embedder.cpp  asset_embedder.hpp  font.cpp  font.hpp  main.cpp  palette.cpp  palette.hpp  stb.cpp  string.cpp  string.hpp
tools/gif_export/: CMakeLists.txt  main.cpp
tools/hot_reload_server/: package-lock.json  package.json  watcher.js
